@@ -43,7 +43,8 @@ extern int AudioSetup(int *, int *, int);	///< setup audio output
 //extern void AudioPause(void);		///< pause audio
 
 extern void AudioSetDevice(const char *);	///< set PCM audio device
-extern void AudioSetDeviceAC3(const char *);	///< set Passthrough device
+extern void AudioSetDeviceAC3(const char *);	///< set pass-through device
+extern void AudioSetChannel(const char *);	///< set mixer channel
 extern void AudioInit(void);		///< setup audio module
 extern void AudioExit(void);		///< cleanup and exit audio module
 
